Add JVM opts and use a newer version